python/stubAppServiceP/k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: dev
  labels:
    app.kubernetes.io/name: mongodb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mongodb  
  ports:
    - port: 27017
      targetPort: 27017
      name: mongodb
