python/stubAppServiceP/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stub-app-service
  labels:
    app.kubernetes.io/name: stub-app-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: stub-app-service
  ports:
    - name: http
      port: 8000
      targetPort: http
